# rust-chat-api

./: .env.example  Cargo.toml  readme.md
migrations/: 20231216144408_init.down.sql  20231216144408_init.up.sql
src/: auth.rs  config.rs  handlers.rs  main.rs  models.rs  queries.rs  requests.rs  responses.rs
src/services/: link_preview.rs  mod.rs
src/socket/: connection.rs  events.rs  handlers.rs  listeners.rs  mod.rs
