[package]
name = "rsblubber-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.35.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socketioxide = "0.16.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tower-http = { version = "0.6.2", features = ["cors"] }
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
dotenv = "0.15.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
jsonwebtoken = "9.2.0"
argon2 = "0.5.2"
axum-macros = "0.5.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
url = "2.5.2"
select = "0.6.1"
